--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "homepage": "https://github.com/ElCapitanSponge/Uno-Scoring#readme",
     "dependencies": {
-        "@angular/animations": "^15.0.0",
+        "@angular/animations": "^15.1.1",
         "@angular/common": "^15.0.0",
         "@angular/compiler": "^15.0.0",
         "@angular/core": "^15.0.0",
@@ -33,6 +33,9 @@
         "@angular/platform-browser": "^15.0.0",
         "@angular/platform-browser-dynamic": "^15.0.0",
         "@angular/router": "^15.0.0",
+        "primeflex": "^3.3.0",
+        "primeicons": "^6.0.1",
+        "primeng": "^15.1.1",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.12.0"
